k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: satanic-link
  labels:
    app: satanic-link
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: satanic-link
